cleanup some egg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = deploy_manager
 
 summary = OpenStack Deploy Server
-author = Tony Cheng @ 104 Corp.
+author = TonyCheng@104 Job Bank Corp.
 author-email = tony.cheng@104.com.tw
 home-page = http://www.104.com.tw
 
@@ -16,6 +16,7 @@ packages =
 data_files =
    /etc/deploy_manager = etc/deploy_manager/deploy_manager.ini
    /etc/deploy_manager/backends = etc/deploy_manager/backends/*
+   /etc/apache = etc/apache/*
 
 [entry_points]
 console_scripts = 
