--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ oslo.config==4.11.1      # Apache-2.0
 oslo.log==3.30.2         # Apache-2.0
 PyMySQL==0.7.11          # MIT
 redis==2.10.6            # MIT
+pbr==2.0.0
