change namespace in entrypoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,10 +22,14 @@ data_files =
 console_scripts = 
    deploy_manager = deploy_manager.app.server:launch
 
-ip_manager.drivers =
+backend.ip.drivers =
    ipv4 = ip_manager_v1.driver:Driver
-   hostname_manager.drivers = hostname = hostname_manager_v1.driver:Driver
-   upgrade_manager.drivers = apt_package = upgrade_manager_v1.driver:Driver
+
+backend.hostname.drivers =
+   hostname = hostname_manager_v1.driver:Driver
+
+backend.upgrade.drivers =
+   apt_package = upgrade_manager_v1.driver:Driver
 
 [pbr]
 #autodoc_index_modules = True
