remove hostname_manager and upgrade_manager

--- a/etc/deploy_manager/deploy_manager.ini
+++ b/etc/deploy_manager/deploy_manager.ini
@@ -14,5 +14,5 @@ database_name = deploy_manager
 
 [backends]
 ip_manager_driver = ipv4
-hostname_manager_driver = hostname
-upgrade_manager_driver = apt_package
+#hostname_manager_driver = hostname
+#upgrade_manager_driver = apt_package
