--- a/etc/deploy_manager/deploy_manager.ini
+++ b/etc/deploy_manager/deploy_manager.ini
@@ -5,6 +5,9 @@ log_dir = /var/log/deploy_manager
 use_stderr = true
 log_date_format = %Y-%m-%d %H:%M:%S
 
+[dispatcher]
+status = deploy_manager.resources.status:HealthResource
+
 [database]
 address = 192.168.99.100
 port = 32768
