add ip mac mapping function

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,8 @@ home-page = http://www.104.com.tw
 packages =
    deploy_manager
    ip_manager_v1
-   hostname_manager_v1
-   upgrade_manager_v1
+#   hostname_manager_v1
+#   upgrade_manager_v1
 
 data_files =
    /etc/deploy_manager = etc/deploy_manager/deploy_manager.ini
@@ -25,11 +25,11 @@ console_scripts =
 backend.ip.drivers =
    ipv4 = ip_manager_v1.driver:Driver
 
-backend.hostname.drivers =
-   hostname = hostname_manager_v1.driver:Driver
+#backend.hostname.drivers =
+#   hostname = hostname_manager_v1.driver:Driver
 
-backend.upgrade.drivers =
-   apt_package = upgrade_manager_v1.driver:Driver
+#backend.upgrade.drivers =
+#   apt_package = upgrade_manager_v1.driver:Driver
 
 [pbr]
 #autodoc_index_modules = True
