setup a real node mac address in etc/backends/ip_manager.ini

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ data_files =
 
 [entry_points]
 console_scripts = 
-   deploy_manager = deploy_manager.app.server:launch
+   deploy_manager = deploy_manager.app.server:main
 
 backend.ip.drivers =
    ipv4 = ip_manager_v1.driver:Driver
