--- a/etc/deploy_manager/deploy_manager.ini
+++ b/etc/deploy_manager/deploy_manager.ini
@@ -2,6 +2,8 @@
 name = deploy_manager
 debug = false
 log_dir = /var/log/deploy_manager
+listen_ip = 0.0.0.0
+listen_port = 7878
 use_stderr = true
 log_date_format = %Y-%m-%d %H:%M:%S
 
