remove dispatch mechenism

--- a/etc/deploy_manager/deploy_manager.ini
+++ b/etc/deploy_manager/deploy_manager.ini
@@ -1,14 +1,16 @@
 [DEFAULT]
 name = deploy_manager
-debug = false
-log_dir = /var/log/deploy_manager
+debug = True
+default_log_levels = debug
+log_file = deploy_manager.log
+log_dir = /var/log
 listen_ip = 0.0.0.0
 listen_port = 7878
 use_stderr = true
 log_date_format = %Y-%m-%d %H:%M:%S
 
-[dispatcher]
-status = deploy_manager.resources.status:HealthResource
+#[dispatcher]
+#status = deploy_manager.resources.status:HealthResource
 
 [database]
 address = 192.168.99.100
