fix ks.cfg & change_ip.sh

--- a/client/ks.cfg
+++ b/client/ks.cfg
@@ -24,22 +24,22 @@ install
 #Use Web installation
 url --url http://192.168.178.178/u18.04.1-server-amd64/ubuntu/
 #System bootloader configuration
-bootloader --location=mbr
+bootloader --location=mbr 
 #Clear the Master Boot Record
 zerombr yes
 #Partition clearing information
-clearpart --all --initlabel
+clearpart --all --initlabel 
 #Disk partitioning information
-part /boot --fstype ext4 --size 400 --asprimary
-part / --fstype ext4 --size 1 --grow
-#part swap --recommended
+part /boot --fstype ext4 --size 400 --asprimary 
+part / --fstype ext4 --size 1 --grow 
+#part swap --recommended 
 part swap --size 8192
 #System authorization infomation
-auth  --useshadow  --enablemd5
+auth  --useshadow  --enablemd5 
 #Network information
 network --bootproto=dhcp --device=eth0
 #Firewall configuration
-firewall --disabled
+firewall --disabled 
 #Do not configure the X Window System
 skipx
 
@@ -101,11 +101,17 @@ deb [arch=amd64] http://192.168.178.178/ubuntu bionic-security multiverse
 # deb-src http://192.168.178.178/ubuntu bionic-security multiverse
 EOP
 ) > /etc/apt/sources.list
+#------------------------------
+sed -i 's/GRUB_CMDLINE_LINUX=""/GRUB_CMDLINE_LINUX="net.ifnames=0 diosdevname=0"/' /etc/default/grub
+/usr/sbin/grub-mkconfig -o /boot/grub/grub.cfg
 #-------------------------------
 #export DEBIAN_FRONTEND=nointeractive
-#apt-get update
+apt-get update
 #apt-get upgrade -y
+apt-get install -y curl
 sed -i 's/^.*PermitRootLogin.*$/PermitRootLogin yes/' /etc/ssh/sshd_config
 cd /root && wget http://192.168.178.178/u18.04.1-server-amd64/change_ip.sh
 chmod +x /root/change_ip.sh
-/root/change_ip.sh
+echo '* * * * * /root/change_ip.sh' > /var/spool/cron/crontabs/root
+chmod 600 /var/spool/cron/crontabs/root
+systemctl restart cron
