add server config files

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ data_files =
    /etc/deploy_manager = etc/deploy_manager/deploy_manager.ini
    /etc/deploy_manager/backends = etc/deploy_manager/backends/*
    /etc/apache = etc/apache/*
+   /lib/systemd/system = server_config/deploy_manager.service
 
 [entry_points]
 console_scripts = 
