--- a/etc/deploy_manager/deploy_manager.ini
+++ b/etc/deploy_manager/deploy_manager.ini
@@ -1,13 +1,13 @@
 [DEFAULT]
 name = deploy_manager
 debug = True
-default_log_levels = debug
+default_log_levels = info
 log_file = deploy_manager.log
 log_dir = /var/log
-listen_ip = 0.0.0.0
-listen_port = 7878
 use_stderr = true
 log_date_format = %Y-%m-%d %H:%M:%S
+listen_ip = 0.0.0.0
+listen_port = 7878
 
 #[dispatcher]
 #status = deploy_manager.resources.status:HealthResource
