change mac address in ini

--- a/etc/deploy_manager/backends/ip_manager.ini
+++ b/etc/deploy_manager/backends/ip_manager.ini
@@ -2,7 +2,8 @@
 
 
 [identities]
-hosts = node1,node2,deploy_test
+hosts = node1,node2,deploy_test, \
+   deploy_test2,deploy_test3,deploy_test4
 
 [node1]
 ip = 10.0.0.78
@@ -15,3 +16,15 @@ mac = 00:11:22:33:44:56
 [deploy_test]
 ip = 10.0.0.72
 mac = 00:50:56:9a:04:44
+
+[deploy_test2]
+ip = 10.0.0.73
+mac = 00:50:56:9a:70:a7
+
+[deploy_test3]
+ip = 10.0.0.74
+mac = 00:50:56:9a:6f:f1
+
+[deploy_test4]
+ip = 10.0.0.75
+mac = 00:50:56:9a:81:a4
