--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ oslo.log==3.30.2         # Apache-2.0
 PyMySQL==0.7.11          # MIT
 redis==2.10.6            # MIT
 pbr==2.0.0
-netmiko==2.3.0
+#netmiko==2.3.0
