--- a/etc/deploy_manager/backends/ip_manager.ini
+++ b/etc/deploy_manager/backends/ip_manager.ini
@@ -2,8 +2,8 @@
 
 
 [identities]
-hosts = node1,node2,deploy_test, \
-   deploy_test2,deploy_test3,deploy_test4
+hosts = node1,node2,deploy_test,
+ deploy_test2,deploy_test3,deploy_test4
 
 [node1]
 ip = 10.0.0.78
