install python packages for ansible

--- a/server_config/ks.cfg
+++ b/server_config/ks.cfg
@@ -114,8 +114,13 @@ export DEBIAN_FRONTEND=nointeractive
 apt update -y
 #apt upgrade -y
 #------------------------------
-apt install -y curl
+apt install -y curl python
 sed -i 's/^.*PermitRootLogin.*$/PermitRootLogin yes/' /etc/ssh/sshd_config
+sed -i 's/^#AuthorizedKeysFile/AuthorizedKeysFile/' /etc/ssh/sshd_config
+sed -i 's/^#UseDNS/UseDNS/' /etc/ssh/sshd_config
+
+mkdir /root/.ssh
+cd /root/.ssh && wget http://192.168.178.178/u18.04.1-server-amd64/id_rsa.pub; mv id_rsa.pub authorized_keys
 cd /root && wget http://192.168.178.178/u18.04.1-server-amd64/50-cloud-init.yaml
 cd /root && wget http://192.168.178.178/u18.04.1-server-amd64/change_ip.sh
 chmod +x /root/change_ip.sh
