update PXE configuration and script

--- a/server_config/ks.cfg
+++ b/server_config/ks.cfg
@@ -114,7 +114,8 @@ export DEBIAN_FRONTEND=nointeractive
 apt update -y
 #apt upgrade -y
 #------------------------------
-apt install -y curl python
+#apt install -y curl python
+apt install -y curl
 sed -i 's/^.*PermitRootLogin.*$/PermitRootLogin yes/' /etc/ssh/sshd_config
 sed -i 's/^#AuthorizedKeysFile/AuthorizedKeysFile/' /etc/ssh/sshd_config
 sed -i 's/^#UseDNS/UseDNS/' /etc/ssh/sshd_config
