--- a/server_config/ks.cfg
+++ b/server_config/ks.cfg
@@ -107,7 +107,7 @@ update-locale LANG="en_US.UTF-8"
 echo 'LANG=en_US.UTF-8' >> /etc/environment
 echo 'LC_ALL=en_US.UTF-8' >> /etc/environment
 #------------------------------
-sed -i 's/GRUB_CMDLINE_LINUX=""/GRUB_CMDLINE_LINUX="net.ifnames=0 diosdevname=0"/' /etc/default/grub
+sed -i 's/GRUB_CMDLINE_LINUX=""/GRUB_CMDLINE_LINUX="net.ifnames=0 biosdevname=0"/' /etc/default/grub
 /usr/sbin/grub-mkconfig -o /boot/grub/grub.cfg
 #-------------------------------
 export DEBIAN_FRONTEND=nointeractive
