--- a/server_config/ks.cfg
+++ b/server_config/ks.cfg
@@ -12,9 +12,9 @@ mouse
 #System timezone
 timezone
 #Root password
-rootpw --iscrypted $1$kgswqRWr$GlzqIcMerCp0QCsxXekzx0
+rootpw --iscrypted $1$y9/qXsAN$fuQs5EJuVmddguDJbI9rF/
 #Initial user
-user queens --fullname "queens" --iscrypted --password $1$KjwbDXDz$.2bZr7oBaDpuNiVDLuIrb1
+user queens --fullname "queens" --iscrypted --password $1$y9/qXsAN$fuQs5EJuVmddguDJbI9rF/
 #Reboot after installation
 reboot
 #Use text mode install
@@ -115,7 +115,7 @@ apt update -y
 #apt upgrade -y
 #------------------------------
 #apt install -y curl python
-apt install -y curl
+apt install -y curl gdisk
 sed -i 's/^.*PermitRootLogin.*$/PermitRootLogin yes/' /etc/ssh/sshd_config
 sed -i 's/^#AuthorizedKeysFile/AuthorizedKeysFile/' /etc/ssh/sshd_config
 sed -i 's/^#UseDNS/UseDNS/' /etc/ssh/sshd_config
