remove grub quiet mode

--- a/server_config/ks.cfg
+++ b/server_config/ks.cfg
@@ -12,9 +12,9 @@ mouse
 #System timezone
 timezone
 #Root password
-rootpw --iscrypted $1$kgswqRWr$GlzqIcMerCp0QCsxXekzx0
+rootpw --iscrypted $1$y9/qXsAN$fuQs5EJuVmddguDJbI9rF/
 #Initial user
-user queens --fullname "queens" --iscrypted --password $1$KjwbDXDz$.2bZr7oBaDpuNiVDLuIrb1
+user queens --fullname "queens" --iscrypted --password $1$y9/qXsAN$fuQs5EJuVmddguDJbI9rF/
 #Reboot after installation
 reboot
 #Use text mode install
@@ -23,6 +23,8 @@ text
 install
 #Use Web installation
 url --url http://192.168.178.178/u18.04.1-server-amd64/ubuntu/
+#Disable iSCSI
+disk-detect disk-detect/iscsi/enable boolean false
 #System bootloader configuration
 bootloader --location=mbr 
 #Clear the Master Boot Record
@@ -30,10 +32,10 @@ zerombr yes
 #Partition clearing information
 clearpart --all --initlabel 
 #Disk partitioning information
-part /boot --fstype ext4 --size 400 --asprimary 
+part /boot --fstype ext4 --size 800 --asprimary 
 part / --fstype ext4 --size 1 --grow 
 #part swap --recommended 
-part swap --size 8192
+part swap --size 131072
 #System authorization infomation
 auth  --useshadow  --enablemd5 
 #Network information
@@ -107,6 +109,7 @@ update-locale LANG="en_US.UTF-8"
 echo 'LANG=en_US.UTF-8' >> /etc/environment
 echo 'LC_ALL=en_US.UTF-8' >> /etc/environment
 #------------------------------
+sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT=".*$/GRUB_CMDLINE_LINUX_DEFAULT="splash"/' /etc/default/grub
 sed -i 's/GRUB_CMDLINE_LINUX=""/GRUB_CMDLINE_LINUX="net.ifnames=0 biosdevname=0"/' /etc/default/grub
 /usr/sbin/grub-mkconfig -o /boot/grub/grub.cfg
 #-------------------------------
