--- a/server_config/ks.cfg
+++ b/server_config/ks.cfg
@@ -26,7 +26,7 @@ url --url http://192.168.178.178/u18.04.1-server-amd64/ubuntu/
 #Disable iSCSI
 disk-detect disk-detect/iscsi/enable boolean false
 #System bootloader configuration
-bootloader --location=mbr 
+bootloader --location=mbr
 #Clear the Master Boot Record
 zerombr yes
 #Partition clearing information
@@ -118,7 +118,7 @@ apt update -y
 #apt upgrade -y
 #------------------------------
 #apt install -y curl python
-apt install -y curl gdisk
+apt install -y curl
 sed -i 's/^.*PermitRootLogin.*$/PermitRootLogin yes/' /etc/ssh/sshd_config
 sed -i 's/^#AuthorizedKeysFile/AuthorizedKeysFile/' /etc/ssh/sshd_config
 sed -i 's/^#UseDNS/UseDNS/' /etc/ssh/sshd_config
